DivKubeCtrlFiler/Ingresses/f19itonk-jrt.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/backends: '{"k8s-be-31057--83df2198a0fbe755":"HEALTHY","k8s-be-31162--83df2198a0fbe755":"HEALTHY","k8s-be-32758--83df2198a0fbe755":"HEALTHY"}'
    ingress.kubernetes.io/forwarding-rule: k8s-fw-default-f19itonk-jrt--83df2198a0fbe755
    ingress.kubernetes.io/target-proxy: k8s-tp-default-f19itonk-jrt--83df2198a0fbe755
    ingress.kubernetes.io/url-map: k8s-um-default-f19itonk-jrt--83df2198a0fbe755
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"f19itonk-jrt","namespace":"default"},"spec":{"rules":[{"host":"f19itonk.example.com","http":{"paths":[{"backend":{"serviceName":"f19itonkaspnetcoremicroservicefrontend-service","servicePort":8090},"path":"/haandvaerkerapp"},{"backend":{"serviceName":"f19itonkaspnetcoremicroservicebackend","servicePort":8080},"path":"/"}]}}]}}
  creationTimestamp: 2019-03-18T10:32:10Z
  generation: 3
  name: f19itonk-jrt
  namespace: default
  resourceVersion: "9917603"
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/f19itonk-jrt
  uid: 16740126-4969-11e9-89da-42010af001d9
spec:
  rules:
  - host: f19itonk.example.com
    http:
      paths:
      - backend:
          serviceName: f19itonkaspnetcoremicroservicefrontend-service
          servicePort: 8090
        path: /haandvaerkerapp
      - backend:
          serviceName: f19itonkaspnetcoremicroservicebackend
          servicePort: 8080
        path: /
status:
  loadBalancer:
    ingress:
    - ip: 35.227.245.35
