DivKubeCtrlFiler/Ingresses/gcef19itonk-jrtnew.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/backends: '{"k8s-be-31057--83df2198a0fbe755":"HEALTHY","k8s-be-31162--83df2198a0fbe755":"HEALTHY","k8s-be-32758--83df2198a0fbe755":"HEALTHY"}'
    ingress.kubernetes.io/forwarding-rule: k8s-fw-default-gcef19itonk-jrtnew--83df2198a0fbe755
    ingress.kubernetes.io/target-proxy: k8s-tp-default-gcef19itonk-jrtnew--83df2198a0fbe755
    ingress.kubernetes.io/url-map: k8s-um-default-gcef19itonk-jrtnew--83df2198a0fbe755
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"gce"},"name":"gcef19itonk-jrtnew","namespace":"default"},"spec":{"rules":[{"http":{"paths":[{"backend":{"serviceName":"f19itonkaspnetcoremicroservicefrontend-service","servicePort":8090},"path":"/*"},{"backend":{"serviceName":"f19itonkaspnetcoremicroservicefrontend-service","servicePort":8090},"path":"/HaandvaerkerApp/*"},{"backend":{"serviceName":"f19itonkaspnetcoremicroservicebac [...]
    kubernetes.io/ingress.class: gce
  creationTimestamp: 2019-04-01T08:49:55Z
  generation: 2
  name: gcef19itonk-jrtnew
  namespace: default
  resourceVersion: "9912500"
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/gcef19itonk-jrtnew
  uid: 1f3cecc6-545b-11e9-b6b8-42010af00018
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: f19itonkaspnetcoremicroservicefrontend-service
          servicePort: 8090
        path: /*
      - backend:
          serviceName: f19itonkaspnetcoremicroservicefrontend-service
          servicePort: 8090
        path: /HaandvaerkerApp/*
      - backend:
          serviceName: f19itonkaspnetcoremicroservicebackend
          servicePort: 8080
        path: /swagger
      - backend:
          serviceName: f19itonkaspnetcoremicroservicebackend
          servicePort: 8080
        path: /swagger/*
      - backend:
          serviceName: f19itonkaspnetcoremicroservicebackend
          servicePort: 8080
        path: /api
      - backend:
          serviceName: f19itonkaspnetcoremicroservicebackend
          servicePort: 8080
        path: /api/*
status:
  loadBalancer:
    ingress:
    - ip: 35.241.4.95
