DivKubeCtrlFiler/Ingresses/gkef19itonk-jrt.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/backends: '{"k8s-be-31057--83df2198a0fbe755":"HEALTHY","k8s-be-31162--83df2198a0fbe755":"HEALTHY","k8s-be-32758--83df2198a0fbe755":"HEALTHY"}'
    ingress.kubernetes.io/forwarding-rule: k8s-fw-default-gkef19itonk-jrt--83df2198a0fbe755
    ingress.kubernetes.io/target-proxy: k8s-tp-default-gkef19itonk-jrt--83df2198a0fbe755
    ingress.kubernetes.io/url-map: k8s-um-default-gkef19itonk-jrt--83df2198a0fbe755
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"gce"},"name":"gkef19itonk-jrt","namespace":"default"},"spec":{"rules":[{"http":{"paths":[{"backend":{"serviceName":"f19itonkaspnetcoremicroservicefrontend-service","servicePort":8090},"path":"/haandvaerkerapp"},{"backend":{"serviceName":"f19itonkaspnetcoremicroservicefrontend-service","servicePort":8090},"path":"/haandvaerkerapp/*"},{"backend":{"serviceName":"f19itonkaspnetcoremicr [...]
    kubernetes.io/ingress.class: gce
  creationTimestamp: 2019-03-18T15:03:24Z
  generation: 1
  name: gkef19itonk-jrt
  namespace: default
  resourceVersion: "8789546"
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/gkef19itonk-jrt
  uid: fa8e065e-498e-11e9-89da-42010af001d9
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: f19itonkaspnetcoremicroservicefrontend-service
          servicePort: 8090
        path: /haandvaerkerapp
      - backend:
          serviceName: f19itonkaspnetcoremicroservicefrontend-service
          servicePort: 8090
        path: /haandvaerkerapp/*
      - backend:
          serviceName: f19itonkaspnetcoremicroservicebackend
          servicePort: 8080
        path: /swagger
      - backend:
          serviceName: f19itonkaspnetcoremicroservicebackend
          servicePort: 8080
        path: /swagger/*
status:
  loadBalancer:
    ingress:
    - ip: 35.241.1.126
