DivKubeCtrlFiler/Ingresses/ngnixf19itonk-jrt-server.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"ngnix"},"name":"ngnixf19itonk-jrt","namespace":"default"},"spec":{"rules":[{"host":"f19itonk.example.dk","http":{"paths":[{"backend":{"serviceName":"f19itonkaspnetcoremicroservicefrontend-service","servicePort":8090},"path":"/haandvaerkerapp"},{"backend":{"serviceName":"f19itonkaspnetcoremicroservicefrontend-service","servicePort":8090},"path":"/haandvaerkerapp/.*"},{"backend":{"se [...]
    kubernetes.io/ingress.class: ngnix
    nginx.ingress.kubernetes.io/use-regex: "true"
  creationTimestamp: 2019-03-25T14:13:52Z
  generation: 2
  name: ngnixf19itonk-jrt
  namespace: default
  resourceVersion: "8334635"
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/ngnixf19itonk-jrt
  uid: 37a4ae22-4f08-11e9-b6b8-42010af00018
spec:
  rules:
  - host: f19itonk.ngnixexample.dk
    http:
      paths:
      - backend:
          serviceName: f19itonkaspnetcoremicroservicefrontend-service
          servicePort: 8090
        path: /haandvaerkerapp
      - backend:
          serviceName: f19itonkaspnetcoremicroservicefrontend-service
          servicePort: 8090
        path: /haandvaerkerapp/.*
      - backend:
          serviceName: f19itonkaspnetcoremicroservicebackend
          servicePort: 8080
        path: /swagger
      - backend:
          serviceName: f19itonkaspnetcoremicroservicebackend
          servicePort: 8080
        path: /swagger/.*
      - backend:
          serviceName: f19itonkaspnetcoremicroservicebackend
          servicePort: 8080
        path: /api
      - backend:
          serviceName: f19itonkaspnetcoremicroservicebackend
          servicePort: 8080
        path: /api/.*
status:
  loadBalancer: {}
